--- a/.gitignore
+++ b/.gitignore
@@ -36,5 +36,7 @@ out/
 ### VS Code ###
 .vscode/
 
-application.yml
-application.yaml
+application-local.yml
+application-local.yaml
+application-prod.yml
+application-prod.yaml
