--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -39,13 +39,14 @@ jobs:
         uses: appleboy/ssh-action@v1.0.3
         env:
           DB_HOST: ${{ secrets.DB_HOST }}
-          MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD }}
-          DB_USERNAME: ${{ secrets.DB_USERNAME }}
+          DB_NAME: point_db
+          SPRING_DATASOURCE_USERNAME: ${{ secrets.DB_USERNAME }}
+          SPRING_DATASOURCE_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD }}
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
-          envs: DB_HOST, MYSQL_ROOT_PASSWORD, DB_USERNAME
+          envs: DB_HOST, DB_NAME, SPRING_DATASOURCE_USERNAME, SPRING_DATASOURCE_PASSWORD
           script_stop: true
           script: |
             cd /home/ubuntu/msa-point-service
@@ -61,4 +62,3 @@ jobs:
       #       -H "X-GitHub-Api-Version: 2022-11-28" \
       #       https://api.github.com/repos/yunjeongwon/msa-infra/dispatches \
       #       -d '{"event_type":"deploy","client_payload":{"service":"point-service"}}'
-      
