align env variables

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -38,6 +38,7 @@ jobs:
       - name: ec2 SSH
         uses: appleboy/ssh-action@v1.0.3
         env:
+          SERVER_PORT: 8080
           DB_HOST: ${{ secrets.DB_HOST }}
           DB_NAME: point_db
           SPRING_DATASOURCE_USERNAME: ${{ secrets.DB_USERNAME }}
@@ -46,7 +47,12 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
-          envs: DB_HOST, DB_NAME, SPRING_DATASOURCE_USERNAME, SPRING_DATASOURCE_PASSWORD
+          envs: >
+            SERVER_PORT,
+            DB_HOST,
+            DB_NAME,
+            SPRING_DATASOURCE_USERNAME,
+            SPRING_DATASOURCE_PASSWORD
           script_stop: true
           script: |
             cd /home/ubuntu/msa-point-service
