--- a/compose.yml
+++ b/compose.yml
@@ -4,8 +4,7 @@ services:
     ports:
       - "8082:8080"
     environment:
-      SERVER_PORT: 8080
-      DB_HOST: ${DB_HOST}
-      DB_NAME: ${DB_NAME}
+      SERVER_PORT: ${SERVER_PORT}
+      SPRING_DATASOURCE_URL: jdbc:mysql://${DB_HOST}:3306/${DB_NAME}
       SPRING_DATASOURCE_USERNAME: ${SPRING_DATASOURCE_USERNAME}
       SPRING_DATASOURCE_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
