--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -56,6 +56,7 @@ jobs:
           script_stop: true
           script: |
             cd /home/ubuntu/msa-point-service
+            git pull origin master
             docker compose pull
             docker compose up -d
   
