--- a/compose.yml
+++ b/compose.yml
@@ -1,6 +1,7 @@
 services:
   point-service:
     image: 267837905230.dkr.ecr.ap-northeast-2.amazonaws.com/board-system/point-service:latest
+    restart: unless-stopped
     ports:
       - "8080:8080"
     environment:
